--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                     <a class="page-scroll" href="#team">Our Team</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Email</a>
+                    <a class="page-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
